--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,6 @@
 @import '~@fortawesome/fontawesome-free/css/all.css';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0;   font-family: Outfit,sans-serif !important;
+}
+
